--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
     "nodemailer": "^6.9.8",
+    "nodemailer-mailgun-transport": "^2.1.5",
     "upload": "^1.3.2"
   },
   "devDependencies": {
